--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -2,11 +2,36 @@
 
 <h1>Editing post</h1>
 
-<%= render "form", post: @post %>
+<%= form_with scope: :post, url: post_path(@post), method: :patch do |form| %>
+  <% if @post.errors.any? %>
+    <div style="color: red">
+      <h2><%= pluralize(@post.errors.count, "error") %> prohibited this post from being saved:</h2>
 
+      <ul>
+        <% @post.errors.each do |error| %>
+          <li><%= error.full_message %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
+
+  <div>
+    <%= form.label :title, style: "display: block" %>
+    <%= form.text_field :title, value: @post.title %>
+  </div>
+
+  <div>
+    <%= form.label :content, style: "display: block" %>
+    <%= form.text_area :content, value: @post.content %>
+  </div>
+
+  <div>
+    <%= form.submit %>
+  </div>
+<% end %>
 <br>
 
 <div>
-  <%= link_to "Show this post", @post %> |
+  <%= link_to "Show this post", post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
 </div>
