--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -6,11 +6,12 @@
 
 <div id="posts">
   <% @posts.each do |post| %>
-    <%= render post %>
+    <%= render 'post', post: post %>
     <p>
-      <%= link_to "Show this post", post %>
+      <%= link_to "Show this post", post_path(post) %>
     </p>
   <% end %>
 </div>
 
-<%= link_to "New post", new_post_path %>
+<%= link_to "New long post", new_long_post_path %>
+<%= link_to "New short post", new_short_post_path %>
