--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,10 +1,10 @@
 <p style="color: green"><%= notice %></p>
 
-<%= render @post %>
+<%= render 'post', post: @post %>
 
 <div>
   <%= link_to "Edit this post", edit_post_path(@post) %> |
   <%= link_to "Back to posts", posts_path %>
 
-  <%= button_to "Destroy this post", @post, method: :delete %>
+  <%= button_to "Destroy this post", post_path(@post), method: :delete %>
 </div>
