--- a/app/views/short_posts/new.html.erb
+++ b/app/views/short_posts/new.html.erb
@@ -26,6 +26,13 @@
   </div>
 
   <div>
+    <%= form.label :user_id, style: "display: block" %>
+    <%= form.collection_select :user_id, @users, :id, :name, include_blank: '------' %>
+  </div>
+
+  <br>
+
+  <div>
     <%= form.submit %>
   </div>
 <% end %>
