--- a/app/views/long_posts/new.html.erb
+++ b/app/views/long_posts/new.html.erb
@@ -26,6 +26,11 @@
   </div>
 
   <div>
+    <%= form.label :tag_ids, "Tags", style: "display: block" %>
+    <%= form.collection_select :tag_ids, @tags, :id, :name, { include_blank: '------' }, { multiple: true } %>
+  </div>
+
+  <div>
     <%= form.label :user_id, style: "display: block" %>
     <%= form.collection_select :user_id, @users, :id, :name, include_blank: '------' %>
   </div>
